// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NFTGallery.vue > Should refetch NFTs when address changes 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col v-col-12">
      <div class="text-center py-6">
        <p class="text-medium-emphasis">No NFTs found</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NFTGallery.vue > Should show NFTs list for address mode 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="1" mode="address"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="2" mode="address"></e-r-c721-token-card-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`NFTGallery.vue > Should show NFTs list for collection mode 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="0" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="1" mode="collection"></e-r-c721-token-card-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`NFTGallery.vue > Should show empty state for address mode 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col v-col-12">
      <div class="text-center py-6">
        <p class="text-medium-emphasis">No NFTs found</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NFTGallery.vue > Should show empty state for collection mode when contract not found 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col v-col-12">
      <div class="text-center py-6">
        <p class="text-medium-emphasis">There are no tokens in this collection, or the contract is missing the totalSupply() method.</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NFTGallery.vue > Should show empty state for collection mode when no total supply 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col v-col-12">
      <div class="text-center py-6">
        <p class="text-medium-emphasis">There are no tokens in this collection, or the contract is missing the totalSupply() method.</p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NFTGallery.vue > Should show loading state 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col d-flex justify-center align-center pa-4">
      <div class="d-flex flex-column align-center justify-center fill-height"><span class="text-caption text-medium-emphasis">Loading NFTs...</span>
        <div class="v-progress-circular v-progress-circular--indeterminate v-theme--light text-primary mt-2" style="width: 32px; height: 32px;" role="progressbar" aria-valuemin="0" aria-valuemax="100"><svg style="transform: rotate(calc(-90deg + 0deg));" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 45.714285714285715 45.714285714285715">
            <circle class="v-progress-circular__underlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="0"></circle>
            <circle class="v-progress-circular__overlay" fill="transparent" cx="50%" cy="50%" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.66370614359172" stroke-dashoffset="125.66370614359172px"></circle>
          </svg>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NFTGallery.vue > Should show pagination and handle page changes when there are more than 12 NFTs > first page 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="0" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="1" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="2" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="3" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="4" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="5" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="6" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="7" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="8" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="9" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="10" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="11" mode="collection"></e-r-c721-token-card-stub>
    </div>
  </div>
  <div class="d-flex justify-center mt-4">
    <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
      <ul class="v-pagination__list">
        <!---->
        <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button></li>
        <li class="v-pagination__item v-pagination__item--is-active" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="true" aria-label="Page 1, Current page"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">1</span>
            <!---->
            <!---->
          </button></li>
        <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 2"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">2</span>
            <!---->
            <!---->
          </button></li>
        <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button></li>
        <!---->
      </ul>
    </nav>
  </div>
</div>"
`;

exports[`NFTGallery.vue > Should show pagination and handle page changes when there are more than 12 NFTs > second page 1`] = `
"<div>
  <div class="v-row">
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="12" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="13" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="14" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="15" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="16" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="17" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="18" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="19" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="20" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="21" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="22" mode="collection"></e-r-c721-token-card-stub>
    </div>
    <div class="v-col-sm-4 v-col-md-2 v-col-6">
      <e-r-c721-token-card-stub contract="[object Object]" contractaddress="0x123" tokenindex="23" mode="collection"></e-r-c721-token-card-stub>
    </div>
  </div>
  <div class="d-flex justify-center mt-4">
    <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
      <ul class="v-pagination__list">
        <!---->
        <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Previous page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button></li>
        <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">1</span>
            <!---->
            <!---->
          </button></li>
        <li class="v-pagination__item v-pagination__item--is-active" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="true" aria-label="Page 2, Current page"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">2</span>
            <!---->
            <!---->
          </button></li>
        <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--border text-primary v-btn--density-comfortable v-btn--size-default v-btn--variant-text" aria-label="Next page" aria-disabled="true" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button></li>
        <!---->
      </ul>
    </nav>
  </div>
</div>"
`;
